fixing spacing on home page

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,4 +1,5 @@
 .main {
+  align-items: center;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
   -ms-animation: fadein 2s; /* Internet Explorer */
@@ -44,10 +45,14 @@
 }
 
 .centerNav {
-  align-items: center;
   text-align: center;
   border-right: 5px solid #13EBA2;
   padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .menuItem {
