--- a/src/components/Project/Projects.module.css
+++ b/src/components/Project/Projects.module.css
@@ -1,5 +1,16 @@
           
 .projects {
-    margin-top: 20px;
     min-width: fit-content;
+    padding: 2rem;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    justify-content: center;
 }
+
+@media screen and (min-width: 600px) {
+    .projects {
+        grid-template-columns: repeat(auto-fit, minmax(24rem, 26rem));
+    }
+}
+
